correcciones ortográficas y de espacios en los textos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -147,7 +147,7 @@
             <!-- Bloque de Texto --> 
             <article class="container mb-5">
                 <h2>O sino...</h2>
-                <p>Sumate tambén a nuestro grupo exclusivo de WhatsApp. Allí compartimos toda la información día a día de la banda, los preparativos para futuros toques, detrás de escenas, ensayos y más. También, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos. <br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor! <br><br> ¿Te vemos en el <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">grupo de WhatsApp</a>  ?</p>
+                <p>Sumate también a nuestro grupo exclusivo de WhatsApp. Allí compartimos toda la información día a día de la banda, los preparativos para futuros toques, detrás de escenas, ensayos y más. Además, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos.<br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor!<br><br> ¿Te vemos en el <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">grupo de WhatsApp</a>  ?</p>
                 <br><br>
             </article>
         </main>
