--- a/pages/shows.html
+++ b/pages/shows.html
@@ -70,7 +70,7 @@
           <!-- Próximos Shows --> 
           <article class="container">
             <h2>Fechas de shows</h2>
-            <p id="efecto-p">No hay toques agendados para los próximos 2 meses, pero si querés saber cuando comienza <br>nuestra próxima gira hacé <a class="btn-wp" href="#ancla-gira">clic aquí</a></p>
+            <p id="efecto-p">No hay toques agendados para los próximos 2 meses, pero si querés saber cuando comienza <br>nuestra próxima gira hacé <a class="btn-wp" href="#ancla-gira">clic acá.</a></p>
           </article>
           <!-- Videos de toques anteriores --- Elemento Bootstrap --> 
           <article class="container">  
@@ -101,9 +101,9 @@
             <!-- Bloque de Texto -->
             <article class="container mb-5">
               <h2>Nuestra próxima gira</h2>
-              <p>Estamos a solo unos meses de comenzar nuestra gira, y mientrás seguimos preparando lo que va a ser nuestro escenario, aún continuamos cerrando nuevas fechas para el cierre de la misma. Comenzarémos en febrero de 2023 y terminaremos sobre octubre, para dejar un mes de descanso antes del cierre del año en la capital del País.🤘😎<br><br>Se vienen lindas sorpresas y lindas fechas. Lo único que podemos adelantarte es que si sos de la ciudad de canelones (más precisamente de Las Piedras) vayas preprando las banderas para el día 4 de febrero 😉 Además de estar celebrando el comienzo de una de las giras más largas que hicimos hasta el momento, ese día es el cumpleaños de nuestro baterias (el Gonza) por lo que podés llevar cosas para tirarle (sutienes, calzones, etc jaja), luego todos le cantamos el Feliz cumpleaños.</p>
+              <p>Estamos a solo unos meses de comenzar nuestra gira, y mientras seguimos preparando lo que va a ser nuestro escenario, aún continuamos cerrando nuevas fechas. Comenzaremos en febrero de 2023 y terminaremos en octubre, para dejar un mes de descanso antes del cierre del año en la capital del país.🤘😎<br><br>Se vienen lindas sorpresas y lindas fechas. Lo único que podemos adelantarte es que si sos de la ciudad de Canelones (más precisamente de Las Piedras) vayas preparando las banderas para el día 4 de febrero. 😉 Además de estar celebrando el comienzo de una de las giras más largas que hicimos hasta el momento, ese día es el cumpleaños de nuestro baterías (el Gonza), por lo que podés llevar cosas para tirarle (sostenes, calzones, etc. jaja), luego todos le cantamos el Feliz Cumpleaños.</p>
               <br>
-              <p>También, recordá que podés unirte a nuestro grupo exclusivo de whatsapp, haciendo <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">clic aquí</a> en donde compartimos toda la información día a día de como van los avances, los preparativos y los ensayos. También, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos. <br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor! Te vemos y leemos dentro del grupo de Whatsapp.</p>
+              <p>También recordá que podés unirte a nuestro grupo exclusivo de WhatsApp haciendo <a class="btn-wp" href="https://chat.whatsapp.com/Jw45ZTQ2JHQB6l7aUISnql" target="_blank">clic acá.</a><br><br> Allí compartimos toda la información día a día de cómo van los avances, los preparativos y los ensayos. Además, cuando estemos en ruta, tendrás mensajes de video en vivo y en directo desde la VAN y podrás seguir el minuto a minuto de la banda llegando a las ciudades en donde toquemos. <br><br> Para nosotros la idea de hacer música es divertirnos, conectar, "hacer ruido" y si es junto a vos, ¡mejor! Te vemos y leemos dentro del grupo de WhatsApp.</p>
             </article>
       </main>
       <!--Pie de página-->
