--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -106,18 +106,18 @@
                 <h2>La chispa</h2>
                 <div class="row justify-content-around">
                     <article class="col-md-5">
-                        <p>Todo comenzó cuando Maximiliano Aguiar (vocalista) se reunió con su viejo amigo de hacía 12 años Marcelo Melgar (guitarrista) a revivir un poco la música que en su momento los había hecho conversar y volverse amigos (incluso teniendo intentos de banda por aquel entonces). Tras dar con varios estilos y escuchar varios albumes de heavy y rock, llegaron al territorio de la música nacional y no hubo duda, "la chispa" que en su momento los había hecho amigos... <strong>LA TRAMPA.</strong></p>
+                        <p>Todo comenzó cuando Maximiliano Aguiar (vocalista) se reunió con su viejo amigo de hacía 12 años Marcelo Melgar (guitarrista) a revivir un poco la música que en su momento los había hecho conversar y volverse amigos, incluso teniendo intentos de banda por aquel entonces. Tras dar con varios estilos y escuchar varios álbumes de heavy y rock, llegaron al territorio de la música nacional y no hubo duda: "la chispa" que en su momento los había hecho amigos... <strong>LA TRAMPA.</strong></p>
                     </article>
                     <article class="col-md-5">
-                        <p>Tras repasar un par de discos (de los de antes de antes, jeje) y comentar que es fue una pena cuando la banda había dejado de tocar 3 años atrás, comentaron bromeando: "che, ¿y si hacemos armamos una banda para hacer tributo y nos divertimos un rato?"<br>No se dijo más, desde ese momento comenzaron la búsqueda de amigos que pudieran completar la formación y tras 3 meses de ensayos realizaron su primer toque juntos. El resto es historia, fue historia. 🤘</p>
+                        <p>Tras repasar un par de discos y comentar que lamentaban que la banda había dejado de tocar 3 años atrás, comentaron bromeando: "che, ¿y si armamos una banda para hacer tributo y nos divertimos un rato?"<br>No se dijo más. Desde ese momento, comenzaron la búsqueda de amigos que pudieran completar la formación y, tras 3 meses de ensayos, realizaron su primer toque juntos. <br>El resto… es historia. Fue historia. 🤘</p>
                     </article>
                 </div>
             </section>
             <!-- Texto y videos  --- Elemento Bootstrap --> 
             <article class="container">
                 <h2>El festejo de 3 años</h2>
-                <p>A lo largo de nuestra (aún corta) vida, tuvimos varios puntos altos que nos hicieron avanzar muchos escalones (salir rapidamente del under, conseguir contrato discográfico, etc). Si tuvieramos que elegir uno par contarte, sin dudas es el toque donde celebramos los 3 años de vida de la banda. Aún siendo solamente una banda tributo, logramos por primera vez, llenar una sala mitica del país (con capacidad para 700 personas) poca veces visto para una banda de tan pocos años. No solo agotamos entradas antes, sino que también logramos que los dueños de ese recinto, conocidos por ser medios tacaños, nos ofrecieran más porcentaje de ganancias y el cierre de 2 fechas más, una para el siguiente día y otra para la siguiente semana. También agotamos.<br><br>
-                Te dejamos un par de videos para que tomes dimensión de lo que fue y por qué fue tan increíble e inportante para nosotros.<br><br></p>
+                <p>A lo largo de nuestra (aún corta) vida, tuvimos varios puntos altos que nos hicieron avanzar muchos escalones: salir rápidamente del under, conseguir contrato discográfico, etc. Si tuviéramos que elegir uno para contarte, sin dudas es el toque donde celebramos los 3 años de vida de la banda.<br><br> Aún siendo solamente una banda tributo, logramos, por primera vez, llenar una sala mítica del país (con capacidad para 700 personas). ¡Algo pocas veces visto para una banda de tan pocos años! No solo agotamos entradas antes, sino que también logramos que los dueños de ese recinto —conocidos por ser medio tacaños— nos ofrecieran más porcentaje de ganancias y el cierre de 2 fechas más, una para el siguiente día y otra para la siguiente semana. También las agotamos.<br><br>
+                    Te dejamos un par de videos para que dimensiones lo que fue y por qué fue tan increíble e importante para nosotros.<br><br></p>
                 <div class="row mt-4 mb-5 justify-content-around">
                     <div class="card" style="width: 25rem;">
                     <iframe width="100%" height="225" src="https://www.youtube.com/embed/uvOYRM-HEfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -126,12 +126,12 @@
                     <iframe width="100%" height="225" src="https://www.youtube.com/embed/pDt9GtoOtG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                <p>Cada grito de esa noche quedó grabado en nuestra memoria para siempre. Tras ese mes de agosto de 2016, la banda logro despegar y conseguir su primer oferta para la grabación de un disco.</p>
+                <p>Cada grito de esa noche quedó grabado en nuestra memoria para siempre. Tras ese mes de agosto de 2016, la banda logró despegar y conseguir su primera oferta para la grabación de un disco.</p>
             </article>
             <!-- Texto Normal --> 
             <article class="container">
                 <h2>Discografía</h2>
-                <p>Si bien la banda tiene 10 años, la verdad es que se ha dedicado por sobre todas las cosas, a tocar en vivo y llevar nuestra música (así como temas aún de la trampa en calidad de tributo) a todos las ciudades del País que nos fuera posible. Nuestra discografía, chica pero contundente es la siguiente: </p>
+                <p>Si bien la banda tiene 10 años, la verdad es que se ha dedicado —por sobre todas las cosas— a tocar en vivo y llevar nuestra música (así como temas de La Trampa en calidad de tributo) a todos las ciudades del país que nos fuera posible. Nuestra discografía, chica pero contundente, es la siguiente: </p>
             </article>
             <!-- Tabla --- Elemento Bootstrap -->  
             <section class="container mt-5 mb-5">
